project2/mandel/mandel-52706237.err

Currently Loaded Modules:
  1) gcc/11.4.0

 

mandel_seq.c: In function 'main':
mandel_seq.c:29:13: error: expected ';' before ',' token
   29 |   for (j = 0, cy = MIN_Y; j < IMAGE_HEIGHT; j++, cy += fDeltaY) {
      |             ^
      |             ;
mandel_seq.c:29:48: error: invalid increment expression
   29 |   for (j = 0, cy = MIN_Y; j < IMAGE_HEIGHT; j++, cy += fDeltaY) {
      |                                                ^
make: *** [mandel_seq.o] Error 1
/var/spool/slurm/slurmd/state/job52706237/slurm_script: line 25: ./mandel_seq: No such file or directory
